unpackaged/main/default/objects/Change_Mgmt_Action__c/Change_Mgmt_Action__c.object-meta.xml
<CustomObject>
    <description>Object for Change Management Team to capture all actions like Trailhead modules, Communications, Support material, Did you know etc.</description>
    <label>Change Management Action</label>
    <nameField>
        <label>Change Mgmt Action  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Change Management Actions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>