unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Change_Type__c</fullName>
    <label>Change Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email Communication</fullName>
            </value>
            <value>
                <fullName>Hive University module - New</fullName>
            </value>
            <value>
                <fullName>Hive University module - Update</fullName>
            </value>
            <value>
                <fullName>Sprint Release Comms</fullName>
            </value>
            <value>
                <fullName>Did you know</fullName>
            </value>
            <value>
                <fullName>Support material</fullName>
            </value>
            <value>
                <fullName>Live Training</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Event / Brownbag</fullName>
            </value>
            <value>
                <fullName>Product Health Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>