unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <inlineHelpText>Requested date the task should be completed</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>