unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/Effort_In_Days__c.field-meta.xml
<CustomField>
    <fullName>Effort_In_Days__c</fullName>
    <inlineHelpText>The effort is the estimated number of working days needed to complete the task</inlineHelpText>
    <label>Effort Estimate (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>