unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/Hive_Badge__c.field-meta.xml
<CustomField>
    <fullName>Hive_Badge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hive University Badge</label>
    <referenceTo>trailheadapp__Badge__c</referenceTo>
    <relationshipLabel>Change Management Actions</relationshipLabel>
    <relationshipName>Change_Management_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>