unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/HIVE_Products__c.field-meta.xml
<CustomField>
    <fullName>HIVE_Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HIVE Products</label>
    <referenceTo>HIVE_Products__c</referenceTo>
    <relationshipLabel>Change Management Actions</relationshipLabel>
    <relationshipName>Change_Management_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>