unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/Hive_Project__c.field-meta.xml
<CustomField>
    <fullName>Hive_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hive Project</label>
    <referenceTo>Hive_Project__c</referenceTo>
    <relationshipName>Change_Mgmt_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>