unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Mgmt_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>