unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Requested / Not Started</label>
            </value>
            <value>
                <fullName>Requirements Clarification</fullName>
            </value>
            <value>
                <fullName>Work in Progress</fullName>
            </value>
            <value>
                <fullName>Ready for Sign-Off</fullName>
            </value>
            <value>
                <fullName>Signed-Off</fullName>
            </value>
            <value>
                <fullName>Done</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>