unpackaged/main/default/objects/Change_Mgmt_Action__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>copado__User_Story__c</referenceTo>
    <relationshipName>Change_Mgmt_Actions</relationshipName>
    <type>Lookup</type>
</CustomField>