unpackaged/main/default/objects/Change_Mgmt_Action__c/listViews/Change_Actions.listView-meta.xml
<ListView>
    <fullName>Change_Actions</fullName>
    <columns>NAME</columns>
    <columns>Change_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Due_Date__c</columns>
    <columns>Hive_Project__c</columns>
    <filterScope>Mine</filterScope>
    <label>Change Actions</label>
</ListView>